--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/native-stack": "^7.1.1",
     "@react-navigation/stack": "^7.0.6",
+    "@reduxjs/toolkit": "^2.5.0",
     "@types/react": "~18.3.12",
     "expo": "~52.0.9",
     "expo-app-loading": "^2.1.1",
@@ -23,9 +24,12 @@
     "react": "18.3.1",
     "react-dom": "^18.2.0",
     "react-native": "0.76.2",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "^0.19.13",
+    "react-redux": "^9.2.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
